# Arduino-AVR-CMake

./: CMakeLists.txt  LICENSE  README.md  blink.cpp
cmake/: arduino_core.cmake  arduino_hex.cmake  arduino_upload.cmake  lto.cmake
cmake/toolchain/: avr.toolchain.cmake  leonardo.toolchain.cmake  mega.toolchain.cmake  uno.toolchain.cmake
